
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct ifreq {int ifr_name; } ;
typedef int n ;
typedef int ifr ;


 int ETH_P_ALL ;
 int PF_PACKET ;
 int SIOCGIFHWADDR ;
 int SOCK_RAW ;
 int SOL_SOCKET ;
 int SO_BROADCAST ;
 int SSTRNCPY (int ,char*,int) ;
 int exit (int) ;
 int htons (int ) ;
 scalar_t__ ioctl (int,int ,struct ifreq*) ;
 int memset (struct ifreq*,int ,int) ;
 int printf (char*,...) ;
 int setsockopt (int,int ,int ,int*,int) ;
 int socket (int ,int ,int ) ;

int open_link(char *ifname){
    struct ifreq ifr;
    int n = 1,fd;


    fd = socket(PF_PACKET, SOCK_RAW, htons(ETH_P_ALL));

    if (fd == -1){
     printf("opening link %s",ifname);
     exit(7);
    }

    memset(&ifr, 0, sizeof (ifr));

    SSTRNCPY(ifr.ifr_name,ifname,sizeof (ifr.ifr_name));

    if (ioctl(fd, SIOCGIFHWADDR, &ifr) < 0 ){
  printf("%s\n","SIOCGIFHWADDR");
  exit(7);
 }
    return fd;


}
