; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/hardware/dos/extr_2915.c_open_link.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/hardware/dos/extr_2915.c_open_link.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifreq = type { i32 }

@PF_PACKET = common dso_local global i32 0, align 4
@SOCK_RAW = common dso_local global i32 0, align 4
@ETH_P_ALL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"opening link %s\00", align 1
@SIOCGIFHWADDR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@.str.2 = private unnamed_addr constant [14 x i8] c"SIOCGIFHWADDR\00", align 1
@SOL_SOCKET = common dso_local global i32 0, align 4
@SO_BROADCAST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @open_link(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.ifreq, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  store i32 1, i32* %4, align 4
  %6 = load i32, i32* @PF_PACKET, align 4
  %7 = load i32, i32* @SOCK_RAW, align 4
  %8 = load i32, i32* @ETH_P_ALL, align 4
  %9 = call i32 @htons(i32 %8)
  %10 = call i32 @socket(i32 %6, i32 %7, i32 %9)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = icmp eq i32 %11, -1
  br i1 %12, label %13, label %17

13:                                               ; preds = %1
  %14 = load i8*, i8** %2, align 8
  %15 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8* %14)
  %16 = call i32 @exit(i32 7) #3
  unreachable

17:                                               ; preds = %1
  %18 = call i32 @memset(%struct.ifreq* %3, i32 0, i32 4)
  %19 = getelementptr inbounds %struct.ifreq, %struct.ifreq* %3, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i8*, i8** %2, align 8
  %22 = call i32 @SSTRNCPY(i32 %20, i8* %21, i32 4)
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* @SIOCGIFHWADDR, align 4
  %25 = call i64 @ioctl(i32 %23, i32 %24, %struct.ifreq* %3)
  %26 = icmp slt i64 %25, 0
  br i1 %26, label %27, label %30

27:                                               ; preds = %17
  %28 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0))
  %29 = call i32 @exit(i32 7) #3
  unreachable

30:                                               ; preds = %17
  %31 = load i32, i32* %5, align 4
  ret i32 %31
}

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i32 @htons(i32) #1

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @memset(%struct.ifreq*, i32, i32) #1

declare dso_local i32 @SSTRNCPY(i32, i8*, i32) #1

declare dso_local i64 @ioctl(i32, i32, %struct.ifreq*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
